== 1.2.7 No Hup
 * Do not trap unsupported HUP signal on Windows

== 1.2.6 Crazy Delicious
 * Make work with Rails 3 out-of-the-box.
 * Auto-detect and load config.ru files on start. Makes Rails 3 work.
 * Fix signals being ignored under 1.9 when daemonized.

== 1.2.5 This Is Not A Web Server
 * Add rolling restart support (--onebyone option) [sikachu]
 * Force external_encoding of request's body to ASCII_8BIT [jeremyz]
 * Ensure Rack base API is used in Rails adapter only if version >= 2.3.2 [#111 state:resolved]

== 1.2.4 Flaming Astroboy
 * Fix a few issues in thin to make it a better "gem citizen" [josh]
 * Fix test for rack based Rails in adapter under Ruby >= 1.8.7 [#109 state:resolved]
 * Fix Remote address spoofing vulnerability in Connection#remote_address [Alexey Borzenkov]
 * Fix uninitialized constant ActionController::Dispatcher error with Rails 1.2.3 [Chris Anderton] [#103 state:resolved]

== 1.2.2 I Find Your Lack of Sauce Disturbing release
 * Fix force kill under 1.9 [Alexey Chebotar]
 * Fix regression when --only option is used w/ --socket.
 * Add process name 'tag' functionality. Easier to distinguish thin daemons 
   from eachother in process listing [ctcherry]

== 1.2.1 Asynctilicious Ultra Supreme release
 * Require Rack 1.0.0
 * Require EventMachine 0.12.6
 * Use Rails Rack based dispatcher when available
 * Allow String for response body
 * Require openssl before eventmachine to prevent crash in 1.9

== 1.2.0 Asynctilicious Supreme release 
 * Add support for Windows mingw Ruby distro [Juan C. Rodriguez]
 * Add async response support, see example/async_*.ru [raggi]

== 1.1.1 Super Disco Power Plus release 
 * Fix bug when running with only options [hasimo]

== 1.1.0 Super Disco Power release
 * Require EventMachine 0.12.4
 * Remove Thin handler, now part of Rack 0.9.1
 * Fix Rack protocol version to 0.1 in environment hash.
 * Fix error when passing no_epoll option to a cluster.
 * Omit parsing #defined strings [Jérémy Zurcher]